<?xml version="1.0"?>
<package>
  <name>choko_guide</name>
  <version>0.0.1</version>
  <description>The choko_guide package</description>
  <maintainer email="todo@todo.todo">ToDo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
</package>
