<?xml version="1.0"?>
<package>
  <name>choko_msgs</name>
  <version>0.0.1</version>
  <description>The ckoko_msgs package</description>
  <maintainer email="todo@todo.todo">ToDo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
